--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <meta name="theme-color" content="#455A64" />
+        <meta name="description" content="Free open source time-tracking app" />
         <link rel="apple-touch-icon" href="logo192.png" />
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700&display=swap" />
